# rust-space-shooter

./: Cargo.toml  README.md
assets/Spaceship1/: License.txt
assets/Spaceship2/: License.txt
assets/Spaceship3/: License.txt
assets/Spaceship4/: License.txt  materials.mtl
src/: camera.rs  combat.rs  enemy.rs  main.rs  particles.rs  state.rs
src/plugins/: enemy_wave_plugin.rs  main_menu.rs  mod.rs  powerups.rs
