[package]
name = "rust-space-shooter"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_obj = { version = "0.11.0", features = ["scene"] }
bevy_rapier3d = { version = "0.22.0", features = [
    "simd-stable",
    "debug-render-3d",
] }
